--- a/style.css
+++ b/style.css
@@ -1,4 +1,16 @@
-[class*="col-"]{
+[class*="col"]{
     background-color: lightseagreen;
     color: white;
+    border: 1px solid white;
+    padding: 1rem;
+    text-align: center;
+}
+
+div.green-background{
+    background-color: green;
+    font-size: 0.8rem;
+}
+
+section.margin-bottom{
+    margin-bottom: 1rem;
 }
