--- a/style.css
+++ b/style.css
@@ -11,6 +11,6 @@ div.green-background{
     font-size: 0.8rem;
 }
 
-section.margin-bottom{
-    margin-bottom: 1rem;
+section.margin{
+    margin: 0.5rem 0;
 }
