--- a/framework.css
+++ b/framework.css
@@ -84,50 +84,46 @@
 
 /* offset-column size */
 
-.col-offset-1{
+.offset-1{
     margin-left: calc((100% / 12) * 1);
 }
 
-.col-offset-2{
+.offset-2{
     margin-left: calc((100% / 12) * 2);
 }
 
-.col-offset-3{
+.offset-3{
 margin-left: calc((100% / 12) * 3);
 }
 
-.col-offset-4{
+.offset-4{
 margin-left: calc((100% / 12) * 4);
 }
 
-.col-offset-5{
+.offset-5{
 margin-left: calc((100% / 12) * 5);
 }
 
-.col-offset-6{
+.offset-6{
 margin-left: calc((100% / 12) * 6);
 }
 
-.col-offset-7{
+.offset-7{
 margin-left: calc((100% / 12) * 7);
 }
 
-.col-offset-8{
+.offset-8{
 margin-left: calc((100% / 12) * 8);
 }
 
-.col-offset-9{
+.offset-9{
 margin-left: calc((100% / 12) * 9);
 }
 
-.col-offset-10{
+.offset-10{
     margin-left: calc((100% / 12) * 10);
 }
 
-.col-offset-11{
+.offset-11{
     margin-left: calc((100% / 12) * 11);
-}
-
-.col-offset-12{
-    margin-left: calc((100% / 12) * 12);
 }
