--- a/framework.css
+++ b/framework.css
@@ -5,6 +5,11 @@
     box-sizing: border-box;
 }
 
+.container{
+max-width: 1200px;
+margin: 0 auto;
+}
+
 .row{
     display: flex;
     flex-wrap: wrap;
